--- a/style.css
+++ b/style.css
@@ -112,11 +112,11 @@ h1{
     border-color: transparent transparent transparent black;
 }
 .timeline ul li div img{
-    width: 200px;
-    height: 200px;
-    border-radius: 50px;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
     padding: 10px;
-    background-color: rgb(39, 58, 69);
+    background-color: rgb(180, 245, 248);
     box-shadow: 0px 0px 0px 6px rgb(255 255 255 / 40%);
     margin-top: -10rem;
     margin-bottom: 20px;
